Switch from experimental-jigsaw to chainsaw